User photo is now a media type element
